# axum-microservice

./: .env  Cargo.toml  README.md
migrations/2025-08-02-124133_users/: down.sql  up.sql
migrations/2025-08-02-125712_roles/: down.sql  up.sql
migrations/2025-08-02-125739_permissions/: down.sql  up.sql
migrations/2025-08-02-130652_role_/: up.sql
migrations/2025-08-02-131713_to_do_list/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
src/api/: dev.rs  error.rs  mod.rs  user.rs
src/config/: config.rs
src/db/: database.rs
src/models/: user.rs
src/services/: user.rs  user_service.rs
